python/asyncio/py.log.txt
File "stdin.py", line 5
    return "stdin.py ok"
    ^
SyntaxError: 'return' outside function